--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,27 @@
        </div>
     </div>
     <div class="body">
-
+      <div class="box1">
+         <p class="box-title">Información sobre nuestros cursos</p>
+      </div>
+        <div class="cards">
+          <div class="card-container">
+             <div class="card"></div>
+             <sub>Matemáticas 1 - Secundaria</sub>
+          </div>
+          <div class="card-container">
+             <div class="card"></div>
+             <sub>Matemáticas 2 - Secundaria</sub>
+          </div>
+          <div class="card-container">
+             <div class="card"></div>
+             <sub>Matemáticas 3 - Secundaria</sub>
+          </div>
+          <div class="card-container">
+             <div class="card"></div>
+             <sub>Fisica - secundaria</sub>
+          </div>
+        </div>
     </div>
     <div class="footer">
 
